RESOLVED FIXED26172
v8's ScriptController::evaluate should protect the Frame like the jsc version.
https://bugs.webkit.org/show_bug.cgi?id=26172
Summary v8's ScriptController::evaluate should protect the Frame like the jsc version.
David Levin
Reported 2009-06-03 13:15:33 PDT
jsc;s ScriptController added refs to the Frame to protect it during certain javascript calls in the following changes: * http://trac.webkit.org/changeset/42409 * http://trac.webkit.org/changeset/42417 v8's version should have the same ref count protections to avoid similar crashes.
Attachments
Proposed fix. (1.71 KB, patch)
2009-06-03 13:24 PDT, David Levin
dglazkov: review+
David Levin
Comment 1 2009-06-03 13:24:03 PDT
Created attachment 30923 [details] Proposed fix.
David Levin
Comment 2 2009-06-03 13:33:31 PDT
Note You need to log in before you can comment on or make changes to this bug.