2009-06-03  David Levin  <levin@chromium.org>

Reviewed by Dimitri Glazkov.

        v8's ScriptController::evaluate should protect the Frame like the jsc version.
        https://bugs.webkit.org/show_bug.cgi?id=26172

        This change is simply copying protections done for Frame in the method
        WebCore::ScriptController::evaluate in the file js/ScriptController.cpp.

        * bindings/v8/ScriptController.cpp:
        (WebCore::ScriptController::evaluate):

git-svn-id: svn://svn.chromium.org/blink/trunk@44391 bbb929c8-8fbe-4397-9dbb-9b2b20218538